[gd_scene load_steps=14 format=3 uid="uid://dbf3spf2ki5px"]

[ext_resource type="Texture2D" uid="uid://wkvwfydg67pm" path="res://art/sprites/tilesets/tavern_flooring.png" id="1_4pst3"]
[ext_resource type="Script" path="res://scripts/Game/TavernGameSceneManager.gd" id="1_tl1ne"]
[ext_resource type="Texture2D" uid="uid://baff6fb2jgy2j" path="res://art/sprites/tilesets/tavern_furniture.png" id="2_guppe"]
[ext_resource type="PackedScene" uid="uid://c1wruq1vniqxl" path="res://Scenes/tavern_scene.tscn" id="4_1ogd8"]
[ext_resource type="PackedScene" uid="uid://mkl1ivf2pshi" path="res://Scenes/Game/TavernDoor.tscn" id="4_pt4fs"]
[ext_resource type="PackedScene" uid="uid://caob7bvo7uk7k" path="res://Scenes/Game/Units/PlayerCharacter.tscn" id="5_cx0rx"]
[ext_resource type="PackedScene" uid="uid://cqq4ym0fxsu8t" path="res://Scenes/Game/Items/Interactable.tscn" id="6_ev1l8"]
[ext_resource type="PackedScene" uid="uid://dpmnvee3ssjvm" path="res://Scenes/Game/NPC_spawner.tscn" id="6_ypesp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_17voc"]
texture = ExtResource("1_4pst3")
3:4/0 = 0
3:4/0/y_sort_origin = 3
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(3, -1, 8, -1, 8, 8, 3, 8)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1, 8, -1, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1, 8, -1, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1, 8, -1, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1, 8, -1, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/y_sort_origin = 3
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1, -3, -1, -3, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.25, -8, 8, -8, 8, 8, 3.3125, 8)
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.1875, -8, -3.0625, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.25, -8, 8, -8, 8, 8, 3.3125, 8)
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.1875, -8, -3.0625, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.25, -8, 8, -8, 8, 8, 3.3125, 8)
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.1875, -8, -3.0625, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.25, -8, 8, -8, 8, 8, 3.3125, 8)
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.1875, -8, -3.0625, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(3, -7.3125, 8, -7.375, 8, 8, 3.3125, 8)
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -2, 8, -2, 8, 8, -8, 8)
5:9/0 = 0
5:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:9/0/physics_layer_0/angular_velocity = 0.0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -2, 8, -2, 8, 8, -8, 8)
6:9/0 = 0
6:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:9/0/physics_layer_0/angular_velocity = 0.0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -2, 8, -2, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:9/0/physics_layer_0/angular_velocity = 0.0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -2, 8, -2, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:9/0/physics_layer_0/angular_velocity = 0.0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3, -8, -3, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
11:7/0 = 0
11:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:7/0/physics_layer_0/angular_velocity = 0.0
12:7/0 = 0
12:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:7/0/physics_layer_0/angular_velocity = 0.0
12:8/0 = 0
12:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:8/0/physics_layer_0/angular_velocity = 0.0
11:8/0 = 0
11:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:8/0/physics_layer_0/angular_velocity = 0.0
10:8/0 = 0
10:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:8/0/physics_layer_0/angular_velocity = 0.0
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
9:8/0 = 0
9:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:8/0/physics_layer_0/angular_velocity = 0.0
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
12:6/0 = 0
12:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:6/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_f1irb"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 3
sources/1 = SubResource("TileSetAtlasSource_17voc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ms7km"]
texture = ExtResource("2_guppe")
1:0/0 = 0
1:0/0/y_sort_origin = 20
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/y_sort_origin = 20
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/y_sort_origin = 3
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -3, 8, -3, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/y_sort_origin = 3
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -3, 8, -3, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/y_sort_origin = 3
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -3, 8, -3, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/y_sort_origin = 3
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -3, 8, -3, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/y_sort_origin = 3
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/y_sort_origin = 3
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 2, -8, 2.0625)
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_lgjjn"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 3
sources/1 = SubResource("TileSetAtlasSource_ms7km")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wu8u"]
size = Vector2(14, 16)

[node name="TavernGameScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_tl1ne")

[node name="Floor" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_f1irb")
format = 2
layer_0/name = "Ground"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(131074, 196609, 4, 196610, 196609, 5, 262146, 196609, 6, 327682, 196609, 7, 393218, 196609, 8, 458754, 196609, 4, 524290, 196609, 5, 589826, 196609, 6, 655362, 196609, 7, 720898, 196609, 8, 786434, 196609, 9, 131075, 262145, 4, 196611, 262145, 5, 262147, 589825, 5, 327683, 589825, 6, 393219, 589825, 8, 458755, 262145, 5, 524291, 262145, 6, 589827, 262145, 7, 655363, 262145, 8, 720899, 262145, 5, 786435, 262145, 9, 131076, 327681, 4, 196612, 327681, 5, 262148, 655361, 5, 327684, 655361, 6, 393220, 655361, 8, 458756, 327681, 5, 524292, 327681, 6, 589828, 327681, 7, 655364, 327681, 8, 720900, 327681, 5, 786436, 327681, 9, 131077, 393217, 4, 196613, 393217, 5, 262149, 720897, 5, 327685, 720897, 6, 393221, 720897, 8, 458757, 393217, 5, 524293, 393217, 6, 589829, 393217, 7, 655365, 393217, 8, 720901, 393217, 5, 786437, 393217, 9, 131078, 458753, 4, 196614, 458753, 5, 262150, 655361, 5, 327686, 655361, 6, 393222, 655361, 8, 458758, 458753, 5, 524294, 458753, 6, 589830, 458753, 7, 655366, 458753, 8, 720902, 458753, 5, 786438, 458753, 9, 131079, 262145, 4, 196615, 262145, 5, 262151, 720897, 5, 327687, 720897, 6, 393223, 720897, 8, 458759, 262145, 5, 524295, 262145, 6, 589831, 262145, 7, 655367, 262145, 8, 720903, 262145, 5, 786439, 262145, 9, 131080, 327681, 4, 196616, 327681, 5, 262152, 786433, 5, 327688, 786433, 6, 393224, 786433, 8, 458760, 327681, 5, 524296, 327681, 6, 589832, 327681, 7, 655368, 327681, 8, 720904, 327681, 5, 786440, 327681, 9, 131081, 393217, 4, 196617, 589825, 5, 262153, 589825, 6, 327689, 589825, 7, 393225, 589825, 6, 458761, 589825, 7, 524297, 589825, 6, 589833, 589825, 7, 655369, 589825, 6, 720905, 589825, 8, 786441, 393217, 9, 196618, 655361, 5, 262154, 655361, 6, 327690, 655361, 7, 393226, 655361, 6, 458762, 655361, 7, 524298, 655361, 6, 589834, 655361, 7, 655370, 655361, 6, 720906, 655361, 8, 196619, 720897, 5, 262155, 720897, 6, 327691, 720897, 7, 393227, 720897, 6, 458763, 720897, 7, 524299, 720897, 6, 589835, 720897, 7, 655371, 720897, 6, 720907, 720897, 8, 131084, 327681, 4, 196620, 786433, 5, 262156, 786433, 6, 327692, 786433, 7, 393228, 786433, 6, 458764, 786433, 7, 524300, 786433, 6, 589836, 786433, 7, 655372, 786433, 6, 720908, 786433, 8, 786444, 327681, 9, 131085, 524289, 4, 196621, 524289, 5, 262157, 524289, 6, 327693, 524289, 7, 393229, 524289, 8, 458765, 524289, 4, 524301, 524289, 5, 589837, 524289, 6, 655373, 524289, 7, 720909, 524289, 8, 786445, 524289, 9)
layer_1/name = "Wall"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(786438, 262145, 9, 786439, 327681, 9, 786440, 393217, 9, 786441, 458753, 9, 786434, 196609, 9, 786435, 262145, 9, 786436, 327681, 9, 786437, 393217, 9, 786444, 458753, 9, 786445, 524289, 9, 131075, 262145, 4, 131076, 327681, 4, 131077, 393217, 4, 131078, 262145, 4, 131079, 327681, 4, 131080, 393217, 4, 131081, 458753, 4, 131084, 458753, 4, 131074, 196609, 4, 196610, 196609, 5, 262146, 196609, 6, 327682, 196609, 7, 393218, 196609, 8, 458754, 196609, 5, 524290, 196609, 5, 589826, 196609, 6, 655362, 196609, 7, 720898, 196609, 8, 524301, 524289, 5, 589837, 524289, 6, 655373, 524289, 7, 720909, 524289, 8, 262157, 524289, 5, 327693, 524289, 6, 393229, 524289, 7, 458765, 524289, 8, 131085, 524289, 4, 196621, 524289, 5)

[node name="Furniture" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_lgjjn")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(196613, 65537, 0, 262149, 65537, 1, 262150, 131073, 1, 196615, 196609, 0, 262151, 196609, 1, 458756, 65537, 3, 524292, 65537, 4, 589828, 65537, 5, 655364, 65537, 6, 458759, 65537, 3, 524295, 65537, 4, 589831, 65537, 5, 655367, 65537, 6, 327685, 65537, 2, 327686, 131073, 2, 327687, 196609, 2, 262152, 262145, 1, 327688, 262145, 2, 458757, 131073, 3, 524293, 131073, 4, 589829, 131073, 5, 655365, 131073, 6, 458760, 131073, 3, 524296, 131073, 4, 589832, 131073, 5, 655368, 131073, 6)

[node name="TavernDoor" parent="." instance=ExtResource("4_pt4fs")]
position = Vector2(176, 192)

[node name="PlayerCharacter" parent="." instance=ExtResource("5_cx0rx")]
position = Vector2(47, 36)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="TavernScene" parent="CanvasLayer" instance=ExtResource("4_1ogd8")]

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(177, 240)

[node name="DoorPoint" type="Marker2D" parent="."]
position = Vector2(176, 215)

[node name="HallwayPoint" type="Marker2D" parent="."]
position = Vector2(176, 97)

[node name="DungeonPoint" type="Marker2D" parent="."]
position = Vector2(176, 52)

[node name="DespawnPoint" type="Marker2D" parent="."]
position = Vector2(176, -52)

[node name="StorePoint" type="Marker2D" parent="."]
position = Vector2(105, 97)

[node name="CounterPoint" type="Marker2D" parent="."]
position = Vector2(105, 84)

[node name="Shelve1Point1" type="Marker2D" parent="."]
position = Vector2(87, 122)

[node name="Shelve1Point2" type="Marker2D" parent="."]
position = Vector2(87, 136)

[node name="Shelve1Point3" type="Marker2D" parent="."]
position = Vector2(87, 154)

[node name="Shelve2Point1" type="Marker2D" parent="."]
position = Vector2(105, 122)

[node name="Shelve2Point2" type="Marker2D" parent="."]
position = Vector2(105, 136)

[node name="Shelve2Point3" type="Marker2D" parent="."]
position = Vector2(105, 154)

[node name="Interactable" parent="." instance=ExtResource("6_ev1l8")]
position = Vector2(72, 152)

[node name="Area2D" type="Area2D" parent="Interactable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable/Area2D"]
position = Vector2(15, 9)
shape = SubResource("RectangleShape2D_4wu8u")

[node name="NpcSpawner" parent="." instance=ExtResource("6_ypesp")]
position = Vector2(177, 281)
spawn_window_duration = 20.0
